--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^15.2.2",
     "@angular/platform-browser-dynamic": "^15.2.2",
     "@angular/router": "^15.2.2",
+    "@tarekraafat/autocomplete.js": "^10.2.7",
     "ng-recaptcha": "^11.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uninstall": "^0.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
