--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tarekraafat/autocomplete.js": "^10.2.7",
     "ng-recaptcha": "^11.0.0",
     "rxjs": "~7.5.0",
+    "swiper": "^9.1.1",
     "tslib": "^2.3.0",
     "uninstall": "^0.0.0",
     "zone.js": "~0.11.4"
