--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^15.2.2",
     "@angular/router": "^15.2.2",
     "@tarekraafat/autocomplete.js": "^10.2.7",
+    "cookieconsent": "^3.1.1",
     "ng-recaptcha": "^11.0.0",
+    "ngx-cookieconsent": "^4.0.2",
     "rxjs": "~7.5.0",
     "swiper": "^9.1.1",
     "tslib": "^2.3.0",
