--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookieconsent": "^3.1.1",
     "ng-recaptcha": "^11.0.0",
     "ngx-cookieconsent": "^4.0.2",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
     "swiper": "^9.1.1",
     "tslib": "^2.3.0",
