--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.2.2",
     "@angular/router": "^15.2.2",
     "@tarekraafat/autocomplete.js": "^10.2.7",
+    "aos": "^2.3.4",
     "cookieconsent": "^3.1.1",
     "ng-recaptcha": "^11.0.0",
     "ngx-cookieconsent": "^4.0.2",
@@ -33,6 +34,7 @@
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.2",
+    "@types/aos": "^3.0.4",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
