final commit extra functions

--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@tarekraafat/autocomplete.js": "^10.2.7",
     "aos": "^2.3.4",
     "cookieconsent": "^3.1.1",
+    "jspdf": "^2.5.1",
     "ng-recaptcha": "^11.0.0",
     "ngx-cookieconsent": "^4.0.2",
     "ngx-pagination": "^6.0.3",
+    "ngx-paypal": "^11.0.0",
     "rxjs": "~7.5.0",
     "swiper": "^9.1.1",
     "tslib": "^2.3.0",
